community/breeze: disable on armhf
due to missing qt5-qtdeclarative. see commit d33b26afd532
(community/qt5-qtdeclarative: disable on armhf)

--- a/community/breeze/APKBUILD
+++ b/community/breeze/APKBUILD
@@ -4,7 +4,7 @@ pkgname=breeze
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Artwork, styles and assets for the Breeze visual style for the Plasma Desktop"
-arch="all"
+arch="all !armhf" # disable on armhf due to missing qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later"
 depends_dev="kdecoration-dev kpackage-dev ki18n-dev kguiaddons-dev kconfigwidgets-dev kwindowsystem-dev"
