--- a/community/kactivitymanagerd/APKBUILD
+++ b/community/kactivitymanagerd/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kactivitymanagerd
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="System service to manage user's activities and track the usage patterns"
-arch="all"
+arch="all !armhf" # disable armhf due to missing qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-only OR GPL-3.0-only"
 depends="qt5-qtbase-sqlite"
