testing/corecollector: upgrade to 0.2.0

--- a/testing/corecollector/APKBUILD
+++ b/testing/corecollector/APKBUILD
@@ -1,13 +1,15 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=corecollector
-pkgver=0.1.1
+pkgver=0.2.0
 pkgrel=0
 pkgdesc="A coredump collector written in D"
 url="https://github.com/Cogitri/corecollector"
-arch="all !s390x !ppc64le" # Missing gdc on ppc64le, missing *context functions on s90x
+arch="all !ppc64le" # Missing gdc on ppc64le
 license="GPL-3.0-or-later"
-makedepends="meson gcc-gdc"
+makedepends="meson gcc-gdc scdoc"
+install="$pkgname.pre-install $pkgname.pre-upgrade"
+subpackages="$pkgname-doc"
 source="https://github.com/Cogitri/corecollector/archive/v$pkgver/corecollector-$pkgver.tar.gz"
 
 build() {
@@ -29,4 +31,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="b67a05e5dd8d56a92a6d3e09d87949d8da9fb83a1d6685f9c9633c0829211aed977f3260d161560503166167054e53a3481f589e675e0db4f61de5db28cef81d  corecollector-0.1.1.tar.gz"
+sha512sums="7af449e9134c663c7ea4de5b529c77bc84115179750fdf9e09492254d3008798e326a4e108d9735111e58f1f1e40414b570f0919749054a35325ec6e15b3dfb3  corecollector-0.2.0.tar.gz"
