--- a/main/nss/APKBUILD
+++ b/main/nss/APKBUILD
@@ -11,7 +11,7 @@ license="MPL GPL"
 options="!check" # failing tests
 depends=
 depends_dev="nspr-dev"
-makedepends="nspr-dev sqlite-dev zlib-dev perl bsd-compat-headers linux-headers"
+makedepends="nspr-dev sqlite-dev zlib-dev perl bsd-compat-headers linux-headers perl"
 subpackages="$pkgname-static $pkgname-dev $pkgname-tools"
 source="https://ftp.mozilla.org/pub/security/$pkgname/releases/NSS_${pkgver//./_}_RTM/src/$pkgname-$pkgver.tar.gz
 	nss.pc.in
@@ -19,6 +19,7 @@ source="https://ftp.mozilla.org/pub/security/$pkgname/releases/NSS_${pkgver//./_
 	nss-softokn.pc.in
 	nss-config.in
 	add_spi+cacert_ca_certs.patch
+	fix-arm-neon.patch
 	"
 builddir="$srcdir/$pkgname-$pkgver"
 
@@ -166,4 +167,5 @@ sha512sums="7d8df73a2e585585a7cb3f887af3f933854984479531b3dd30316873bdd92c130e2f
 0f2efa8563b11da68669d281b4459289a56f5a3a906eb60382126f3adcfe47420cdcedc6ab57727a3afeeffa2bbb4c750b43bef8b5f343a75c968411dfa30e09  nss-util.pc.in
 09c69d4cc39ec9deebc88696a80d0f15eb2d8c94d9daa234a2adfec941b63805eb4ce7f2e1943857b938bddcaee1beac246a0ec627b71563d9f846e6119a4a15  nss-softokn.pc.in
 2971669e128f06a9af40a5ba88218fa7c9eecfeeae8b0cf42e14f31ed12bf6fa4c5ce60289e078f50e2669a9376b56b45d7c29d726a7eac69ebe1d1e22dc710b  nss-config.in
-6e04556858499aec465d6670818465327ba2cb099061c2afee4b5cac8aa61938e0095906acfb38df6a1b70a6bde6dd69f08bb4c00a9d188e4cb3131b26c1bc16  add_spi+cacert_ca_certs.patch"
+6e04556858499aec465d6670818465327ba2cb099061c2afee4b5cac8aa61938e0095906acfb38df6a1b70a6bde6dd69f08bb4c00a9d188e4cb3131b26c1bc16  add_spi+cacert_ca_certs.patch
+5ecd145f0aef0d38d19120772fbb1f5cbef266de069b5939cb3053d82b4ee848733604f1ad2aeed8dcff8f0abe33f1ef1fc51ff1971d425d7a1f96d9baeedbe3  fix-arm-neon.patch"
