--- a/community/clipper/APKBUILD
+++ b/community/clipper/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=clipper
 pkgver=6.4.2
 pkgrel=0
