community/py3-cu2qu: orphan

--- a/community/py3-cu2qu/APKBUILD
+++ b/community/py3-cu2qu/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-cu2qu
 pkgver=1.6.6
 pkgrel=0
