community/totem-pl-parser: orphan

--- a/community/totem-pl-parser/APKBUILD
+++ b/community/totem-pl-parser/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=totem-pl-parser
 pkgver=3.26.4
 pkgrel=0
