--- a/community/py3-ufolib2/APKBUILD
+++ b/community/py3-ufolib2/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-ufolib2
 pkgver=0.5.1
 pkgrel=0
