--- a/community/py3-ufo2ft/APKBUILD
+++ b/community/py3-ufo2ft/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-ufo2ft
 pkgver=2.11.1
 pkgrel=1
