--- a/community/py3-deprecated/APKBUILD
+++ b/community/py3-deprecated/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-deprecated
 pkgver=1.2.7
 pkgrel=0
