community/grilo: orphan

--- a/community/grilo/APKBUILD
+++ b/community/grilo/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=grilo
 pkgver=0.3.10
 pkgrel=0
