community/adapta-kde: orphan

--- a/community/adapta-kde/APKBUILD
+++ b/community/adapta-kde/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=adapta-kde
 pkgver=20180828
 pkgrel=1
