--- a/community/cmark/APKBUILD
+++ b/community/cmark/APKBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=cmark
 pkgver=0.29.0
 pkgrel=0
@@ -8,7 +8,7 @@ arch="all"
 license="BSD-2-Clause"
 makedepends="cmake re2c"
 subpackages="$pkgname-doc $pkgname-static $pkgname-dev lib$pkgname:libs"
-source="$pkgname-$pkgver.tar.gz::https://github.com/commonmark/$pkgname/archive/$pkgver.tar.gz"
+source="cmark-$pkgver.tar.gz::https://github.com/commonmark/cmark/archive/$pkgver.tar.gz"
 
 build() {
 	mkdir -p "$builddir"/build
