community/woff2: orphan

--- a/community/woff2/APKBUILD
+++ b/community/woff2/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=woff2
 pkgver=1.0.2
 pkgrel=0
@@ -11,7 +11,7 @@ license="GPL-3.0-or-later"
 makedepends="brotli-dev cmake"
 subpackages="$pkgname-dev lib${pkgname}common:_common lib${pkgname}enc:_enc
 	lib${pkgname}dec:_dec"
-source="$pkgname-$pkgver.tar.gz::https://github.com/google/woff2/archive/v${pkgver}.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/google/woff2/archive/v$pkgver.tar.gz
 	dont-set-rpath.patch
 	install-executables.patch
 	"
