community/adapta-gtk-theme: orphan

--- a/community/adapta-gtk-theme/APKBUILD
+++ b/community/adapta-gtk-theme/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=adapta-gtk-theme
 pkgver=3.95.0.11
 pkgrel=2
