orphan appstream, libdwarf and libplacebo

--- a/community/libdwarf/APKBUILD
+++ b/community/libdwarf/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: David Huffman <storedbox@outlook.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=libdwarf
 pkgver=20191104
 pkgrel=0
