--- a/community/libplacebo/APKBUILD
+++ b/community/libplacebo/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=libplacebo
 pkgver=1.29.1
 pkgrel=1
