--- a/community/appstream/APKBUILD
+++ b/community/appstream/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=appstream
 pkgver=0.12.9
 pkgrel=1
