orphan py3-pyrsistent and libsigc++3

--- a/testing/libsigc++3/APKBUILD
+++ b/testing/libsigc++3/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=libsigc++3
 pkgver=3.0.2
 pkgrel=1
