--- a/community/py3-pyrsistent/APKBUILD
+++ b/community/py3-pyrsistent/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-pyrsistent
 pkgver=0.15.7
 pkgrel=0
