community/gnome-contacts: upgrade to 3.34.1

--- a/community/gnome-contacts/APKBUILD
+++ b/community/gnome-contacts/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-contacts
-pkgver=3.34
-pkgrel=1
+pkgver=3.34.1
+pkgrel=0
 pkgdesc="A contacts manager for GNOME"
 url="https://wiki.gnome.org/Apps/Contacts"
 arch="all !s390x" # libhandy is missing
@@ -12,7 +12,7 @@ makedepends="meson vala folks-dev libgee-dev glib-dev gnome-desktop-dev
 	libhandy-dev gtk+3.0-dev"
 checkdepends="appstream-glib desktop-file-utils"
 subpackages="$pkgname-lang $pkgname-doc"
-source="https://download.gnome.org/sources/gnome-contacts/$pkgver/gnome-contacts-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/gnome-contacts/${pkgver%.*}/gnome-contacts-$pkgver.tar.xz"
 
 build() {
 	meson \
@@ -33,4 +33,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="69ea158e52ba0138b523b8dd925e9a729b76f418a82c90ee46a0023fa9d5260afa080540e513f1bc05c34ab9e115733d06eff3f12a05654ab963e3219f9fb128  gnome-contacts-3.34.tar.xz"
+sha512sums="6dad3fd9d199ad87c642e9f36102a142958cd3f577eba36fa3ed2800af5acb44752fa1f8b7eb8991974c514245af51015e6b5e08636274b9048813c37abcc478  gnome-contacts-3.34.1.tar.xz"
