--- a/testing/py3-iso8601/APKBUILD
+++ b/testing/py3-iso8601/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=py3-iso8601
 pkgver=0.1.12
 pkgrel=1
