testing/dav1d: orphan

--- a/testing/dav1d/APKBUILD
+++ b/testing/dav1d/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=dav1d
 pkgver=0.5.2
 pkgrel=0
