testing/squeekboard: upgrade to 1.7.0

--- a/testing/squeekboard/APKBUILD
+++ b/testing/squeekboard/APKBUILD
@@ -1,16 +1,15 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=squeekboard
-pkgver=1.2.2
+pkgver=1.7.0
 pkgrel=0
 pkgdesc="The final Phosh keyboard"
-arch="all !s390x" # Blocked by rust
+arch="all !s390x !ppc64le" # Blocked by rust, fails to build on ppc64le
 url="https://source.puri.sm/Librem5/squeekboard"
 license="GPL-3.0-or-later"
 makedepends="meson ninja rust cargo bash glib-dev wayland-protocols wayland-dev gtk+3.0-dev libcroco-dev"
 checkdepends="xvfb-run"
 source="https://source.puri.sm/Librem5/squeekboard/-/archive/v$pkgver/squeekboard-v$pkgver.tar.gz"
-subpackages="$pkgname-lang"
 builddir="$srcdir/$pkgname-v$pkgver"
 
 build() {
@@ -31,4 +30,4 @@ check() {
 package() {
 	DESTDIR="$pkgdir" ninja install -C output
 }
-sha512sums="ba277962e0d851298438e29c9bd58b11db058e427ae91e6a5b80e2147bc3ee7c0bbc9a8424205df19d976cac82b3a6e625a373f680f0b5cf556f0e7698cfc0f7  squeekboard-v1.2.2.tar.gz"
+sha512sums="8db66ff7ab9e1983af4bf039a913a3bb74b19892d6d65e49b07466414ae144d45ebe677b888d9611d54f6b5a445445eecf5c96ac634d550b8156d1a044bbb0a3  squeekboard-v1.7.0.tar.gz"
