community: Adopt orphaned py3-* packages required for building ttf-cantarell
Affected APKBUILDS:
community/py3-booleanoperations/APKBUILD
community/py3-compreffor/APKBUILD
community/py3-cu2qu/APKBUILD
community/py3-defcon/APKBUILD
community/py3-pyclipper/APKBUILD
community/py3-ufolib2/APKBUILD

--- a/community/py3-cu2qu/APKBUILD
+++ b/community/py3-cu2qu/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer:
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=py3-cu2qu
 pkgver=1.6.6
 pkgrel=0
