--- a/community/py3-booleanoperations/APKBUILD
+++ b/community/py3-booleanoperations/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer:
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=py3-booleanoperations
 _pkgname=booleanOperations
 pkgver=0.9.0
