--- a/community/py3-compreffor/APKBUILD
+++ b/community/py3-compreffor/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer:
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=py3-compreffor
 pkgver=0.5.0
 pkgrel=0
