--- a/community/py3-defcon/APKBUILD
+++ b/community/py3-defcon/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer:
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=py3-defcon
 pkgver=0.6.0
 pkgrel=0
