--- a/community/py3-pyclipper/APKBUILD
+++ b/community/py3-pyclipper/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer:
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=py3-pyclipper
 pkgver=1.1.0
 pkgrel=0
