Apply suggestion to testing/cdogs-sdl/APKBUILD

--- a/testing/cdogs-sdl/APKBUILD
+++ b/testing/cdogs-sdl/APKBUILD
@@ -7,8 +7,7 @@ pkgdesc="Classic overhead run-and-gun game"
 url="https://cxong.github.io/cdogs-sdl/"
 arch="x86_64 x86"
 license="GPL"
-depends="sdl2 sdl2_mixer sdl2_image mesa"
-makedepends="cmake"
+makedepends="cmake sdl2_image-dev sdl2-dev sdl2_mixer-dev mesa-dev"
 options="!check"
 source="$pkgname-$pkgver.tar.gz::https://github.com/cxong/$pkgname/archive/$pkgver.tar.gz"
 
