community/libluv: use !check and fix pkgdesc=

--- a/community/libluv/APKBUILD
+++ b/community/libluv/APKBUILD
@@ -3,8 +3,9 @@
 pkgname=libluv
 _release=0
 pkgver=1.32.0.$_release
-pkgrel=0
-pkgdesc="Bare libuv  bindings for lua"
+pkgrel=1
+pkgdesc="Bare libuv bindings for lua"
+options="!check" # No testsuite
 url="https://github.com/luvit/luv"
 arch="all !s390x"
 license="Apache-2.0"
@@ -28,11 +29,6 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		..
 	ninja
-}
-
-check() {
-	# Replace with proper check command(s)
-	:
 }
 
 package() {
