community/kvantum: switch to ninja

--- a/community/kvantum/APKBUILD
+++ b/community/kvantum/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=kvantum
 pkgver=0.14.1
-pkgrel=0
+pkgrel=1
 pkgdesc="SVG-based theme engine for Qt5"
 options="!check" # No testsuite
 url="https://github.com/tsujan/Kvantum"
@@ -10,7 +10,7 @@ arch="all"
 license="GPL-2.0-or-later"
 depends="hicolor-icon-theme"
 makedepends="cmake qt5-qtbase-dev qt5-qtsvg-dev qt5-qtx11extras-dev libx11-dev
-	libxext-dev kwindowsystem-dev qt5-qttools-dev"
+	libxext-dev kwindowsystem-dev qt5-qttools-dev ninja"
 source="$pkgname-$pkgver.tar.gz::https://github.com/tsujan/Kvantum/archive/V$pkgver/kvantum-$pkgver.tar.gz"
 builddir="$srcdir/Kvantum-$pkgver/Kvantum"
 
@@ -19,6 +19,7 @@ build() {
 		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
 	fi
 	cmake \
+		-GNinja \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_SHARED_LIBS=True \
 		-DCMAKE_BUILD_TYPE=Release \
@@ -26,11 +27,11 @@ build() {
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		-DENABLE_QT4=OFF \
 		${CMAKE_CROSSOPTS} .
-	make
+	ninja
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" ninja install
 	rm -rf "$pkgdir"/usr/share/kde4
 }
 
