--- a/main/glslang/APKBUILD
+++ b/main/glslang/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=glslang
 pkgver=8.13.3559
-pkgrel=0
+pkgrel=1
 pkgdesc="Khronos reference front-end for GLSL, ESSL, and sample SPIR-V generator"
 options="!check" # Requires git checkout of gmock
 url="https://github.com/KhronosGroup/glslang"
 arch="all"
 license="BSD-3-Clause"
 depends_dev="$pkgname"
-makedepends="cmake python3 bison"
+makedepends="cmake ninja python3 bison"
 subpackages="$pkgname-static $pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/KhronosGroup/glslang/archive/$pkgver.tar.gz"
 
@@ -18,6 +18,7 @@ build() {
 		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
 	fi
 	cmake \
+		-GNinja \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=True \
@@ -26,11 +27,11 @@ build() {
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		-DBUILD_SHARED_LIBS=ON \
 		${CMAKE_CROSSOPTS} .
-	make
+	ninja
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" ninja install
 }
 
 sha512sums="d2f09888dd1b6edb4f324502627aeca0c78411f61ab50e672fa2a6d9ae46611849e1d13b9c6069b77f31092d843abcf3d74ed7cfc3c9144ced80e65876f4b781  glslang-8.13.3559.tar.gz"
