community/spirv-headers: use ninja

--- a/community/spirv-headers/APKBUILD
+++ b/community/spirv-headers/APKBUILD
@@ -3,28 +3,29 @@
 pkgname=spirv-headers
 _pkgname=SPIRV-Headers
 pkgver=1.5.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Machine-readable files for the SPIR-V Registry"
 options="!check" # No testsuite
 url="https://github.com/KhronosGroup/SPIRV-Headers"
 arch="noarch"
 license="GPL-3.0-or-later"
-makedepends="cmake"
+makedepends="cmake ninja"
 source="$pkgname-$pkgver.corrected.tar.gz::https://github.com/KhronosGroup/$_pkgname/archive/$pkgver.corrected.tar.gz"
 
 builddir="$srcdir/$_pkgname-$pkgver.corrected"
 
 build() {
 	cmake \
+		-GNinja \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_SHARED_LIBS=True \
 		-DCMAKE_BUILD_TYPE=Release \
 		${CMAKE_CROSSOPTS} .
-	make
+	ninja
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" ninja install
 }
 
 sha512sums="92447b1b1eca6f0253265f36d67b00c0c79e93f6a707e27bd8239bd2f693c468a92b7f7c3bb3fde6bb091383baaff42d3b0bbfeb9ff5f952d8a0b9626b03848e  spirv-headers-1.5.1.corrected.tar.gz"
