community/wlroots: add xkeyboard-config dependency

--- a/community/wlroots/APKBUILD
+++ b/community/wlroots/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=wlroots
 pkgver=0.8.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A modular Wayland compositor library"
 url="https://github.com/swaywm/wlroots"
 arch="all"
@@ -23,6 +23,7 @@ makedepends="
 	wayland-protocols
 	xcb-util-image-dev
 	xcb-util-wm-dev
+	xkeyboard-config
 	"
 subpackages="$pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/$pkgname/archive/$pkgver.tar.gz
