--- a/testing/k3s/APKBUILD
+++ b/testing/k3s/APKBUILD
@@ -1,8 +1,9 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=k3s
-pkgver=1.0.1
-pkgrel=1
+_pkgver=1.17.0+k3s.1
+pkgver=${_pkgver/+k3s/}
+pkgrel=0
 pkgdesc="Lightweight Kubernetes. 5 less than k8s."
 url="https://k3s.io"
 arch="all"
@@ -11,7 +12,7 @@ options="chmod-clean !check" # No test suite from upstream
 depends="cni-plugins conntrack-tools containerd coreutils findutils ipset"
 makedepends="go linux-headers"
 subpackages="$pkgname-doc $pkgname-openrc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/rancher/k3s/archive/v$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/rancher/k3s/archive/v$_pkgver.tar.gz
 	k3s.initd
 	k3s.confd
 	"
@@ -29,7 +30,7 @@ prepare() {
 	export GOPATH="$srcdir"
 
 	mkdir -p "$(dirname $builddir)"
-	mv "$srcdir"/$pkgname-$pkgver "$builddir"/
+	mv "$srcdir"/$pkgname-${_pkgver/+/-} "$builddir"/
 
 	default_prepare
 }
@@ -44,9 +45,6 @@ build() {
 
 	msg2 "Building kubectl..."
 	go build -o kubectl ./cmd/kubectl
-
-	msg2 "Building hypercube..."
-	go build -o hyperkube ./vendor/k8s.io/kubernetes/cmd/hyperkube
 }
 
 package() {
@@ -54,8 +52,6 @@ package() {
 		"$pkgdir"/usr/bin/k3s
 	install -m755 -D kubectl \
 		"$pkgdir"/usr/bin/kubectl
-	install -m755 -D hyperkube \
-		"$pkgdir"/usr/bin/hypercube
 
 	install -m644 -D -t "$pkgdir"/usr/share/doc/$pkgname README.md
 
@@ -63,6 +59,6 @@ package() {
 	install -m644 -D "$srcdir"/k3s.confd "$pkgdir"/etc/conf.d/k3s
 }
 
-sha512sums="64bd3f42e570ff26b34202390371b434210f411d1cdf54d97b40ee9a4a9ca75071176a95170bf36f6c7c224e1e920093f3eec75c3b1c13671f60f00c4991bdc3  k3s-1.0.1.tar.gz
+sha512sums="0fe69d9b43b88fa0c63ce55acbd6f23a645a74f9319cd8dd128a9fe7ea5e758df195e79ac9d2a91dc137d84db6cf68128ff53552c76cf5b81ab75f72cd6d1636  k3s-1.17.0.1.tar.gz
 9501422f1bf5375555116cbeedb32de32109153396699bde1300ce01156c3e57fe3fb14a57f7de1dce47c955e5e6d61de7fea181a07b407f5b452006bc58991c  k3s.initd
 dda2fc70e884ef439fece8f850d798f98d07cd431f0b8b79183f192b35f68fc7c633d3c790aae7b86ca57331212a7bb2f783131b752a4e1e71ef918469e6b944  k3s.confd"
