testing/grafana-image-renderer: upgrade to 1.0.8b2

--- a/testing/grafana-image-renderer/APKBUILD
+++ b/testing/grafana-image-renderer/APKBUILD
@@ -1,7 +1,8 @@
 # Contributor: Konstantin Kulikov <k.kulikov2@gmail.com>
 # Maintainer: Konstantin Kulikov <k.kulikov2@gmail.com>
 pkgname=grafana-image-renderer
-pkgver=1.0.5
+pkgver=1.0.8b2
+_pkgver=1.0.8-beta2
 pkgrel=0
 pkgdesc="Grafana Backend Plugin that handles rendering of panels & dashboards to PNGs using headless chrome"
 url="https://github.com/grafana/grafana-image-renderer"
@@ -12,8 +13,9 @@ depends="nodejs ttf-opensans chromium ca-certificates"
 options="!check" # Has no test suite.
 install="$pkgname.pre-install"
 subpackages="$pkgname-openrc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/grafana/grafana-image-renderer/archive/v$pkgver.tar.gz
+source="$pkgname-$_pkgver.tar.gz::https://github.com/grafana/grafana-image-renderer/archive/v$_pkgver.tar.gz
 	$pkgname.initd $pkgname.confd 10-host-param.patch"
+builddir="$srcdir/$pkgname-$_pkgver"
 
 build() {
 	export CHROME_BIN="/usr/bin/chromium-browser"
@@ -33,7 +35,7 @@ package() {
 	cp -r "$builddir/node_modules" "$builddir/build" "$builddir/proto" "$pkgdir/usr/share/$pkgname/"
 }
 
-sha512sums="44460e19b4225c27166d0f88a7bd73b12d85a38ff6057b82c66b0874d33ad436f6ea0245f138583efb72d3aa9073362907f873d3df06650cf6e21a4e07daaad8  grafana-image-renderer-1.0.5.tar.gz
-2b2b7952153419d8593b058cb9994f88e4191fcc58893c33d15592b0cac02d2859c9ebbdeb34e6365bd0633eee19393a274535679d32ffa220e375114f4915fc  grafana-image-renderer.initd
+sha512sums="01e8dbb779c16053ca117169eaa922521fbff3b36df76711ca89e7ad82fc4a2a39e108d6c882010beb27d548629dde4cd696147d1c46aa7f501dcb77e89fc84e  grafana-image-renderer-1.0.8-beta2.tar.gz
+79d28359b873ecc584dae7cc590137e4b380606e494e4614e3d1da307e6616dcdc86181bd5d09f97f6df13d7863bf90f9393336df437a97a9124dc6c1ba15762  grafana-image-renderer.initd
 ee4fd884d39eb556ffebeb3bc8fc66295d660e94f0a1d58dea57745da967f62216096e481e417cecaf8a51c4181dff4f4586b70cfc2ee7dbad622a6b28735ad0  grafana-image-renderer.confd
-824b41f1a86ea97fdf4c9c34e8171a948ec07c03fa030f37614464f8d4b96984d3d49bf5579584216a5a86b7fa321e281b35d67ffdbfc4c83ee943af35d96dc1  10-host-param.patch"
+04cc3b837c6c12d600c84b98d68e098147ff041b1e64de44f3a9da0c0fa1adca8ddc58aa3991354e9d48a137603a4bc5a284ae2c2a7997af4460bc14d4c3bf71  10-host-param.patch"
