testing/shadowsocks-libev: upgrade to 3.3.4

--- a/testing/shadowsocks-libev/APKBUILD
+++ b/testing/shadowsocks-libev/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=shadowsocks-libev
-pkgver=3.3.3
+pkgver=3.3.4
 pkgrel=0
 pkgdesc="lightweight secured SOCKS5 proxy"
 url="https://shadowsocks.org/en/download/servers.html"
@@ -12,6 +12,11 @@ subpackages="$pkgname-dev $pkgname-doc lib$pkgname:libs"
 source="shadowsocks-libev-$pkgver.tar.gz::https://github.com/shadowsocks/shadowsocks-libev/archive/v$pkgver.tar.gz
 	use-upstream-libcorkipset-libbloom.patch
 	"
+
+# secfixes
+#   3.3.4-r0:
+#     - CVE-2019-5163
+#     - CVE-2019-5164
 
 prepare() {
 	default_prepare
@@ -39,5 +44,5 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="f02b43ee95b18b0a63fae1a1ad56b4d5e41cc79dc38cd9ad71c3830b7bb97a14110299f766b1e2cfbd6ce362f4c76c338693b1d8b558cf18b9c5e53a08fddd38  shadowsocks-libev-3.3.3.tar.gz
+sha512sums="4fb9e4a62f86f1504aab71022b5078a1f97b1f14da82c7b456dc9eaed23be990430769f37b7c2855c266be40ec215237bb0a40d254dffac8556ec4719cc9aa6d  shadowsocks-libev-3.3.4.tar.gz
 6e14365fb65731e4f9573b39dd7849d47392b39db52aeffee0e91ee767db2361b053f02bc96cc439e5b677d85c09cd44fd905d6b1fca8b10d2e650d8c41a16e0  use-upstream-libcorkipset-libbloom.patch"
