--- a/testing/poetry/APKBUILD
+++ b/testing/poetry/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer:
 pkgname=poetry
-pkgver=1.0.0
+pkgver=1.0.2
 pkgrel=0
 pkgdesc="Python3 dependency management and packaging system"
 url="https://poetry.eustace.io/"
@@ -9,7 +9,7 @@ arch="noarch"
 license="MIT"
 depends="
 	python3
-	py3-cleo<0.7.6
+	py3-cleo
 	py3-requests
 	py3-cachy
 	py3-jsonschema
@@ -20,6 +20,7 @@ depends="
 	py3-html5lib
 	py3-shellingham
 	py3-tomlkit
+	py3-clikit
 	"
 source="
 	$pkgname-$pkgver.tar.gz::https://github.com/sdispater/poetry/archive/$pkgver.tar.gz
@@ -34,5 +35,5 @@ package() {
 
 	install -Dm0755 "$srcdir"/poetry.py "$pkgdir"/usr/bin/poetry
 }
-sha512sums="ae241c4c8c67b15440261019014303f1af196c2a16295cfb1fbdb73357ca2c4045c46da575d0cf26e981f0dbefce15f05ee572c2ec2d33ab6afab43eaae3ef95  poetry-1.0.0.tar.gz
+sha512sums="14bb691b6421b8f9449001bf9e30e0512cfd19f09702b230a53feac25936b365fb15119d4d0c0a4c428fe973567fdf911e38effbeea16f63601e0cb2c90e9d1d  poetry-1.0.2.tar.gz
 fca6cad49967e7fae7fcdd12e6d15da649f11dd0acfc6e0904eb75ec1f3b477a28328553a4b356422087a3f375d5a4851cf9c793eb041f7ae427352b4747a6fc  poetry.py"
