community/pngquant: upgrade to 2.12.6

--- a/community/pngquant/APKBUILD
+++ b/community/pngquant/APKBUILD
@@ -1,27 +1,30 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=pngquant
-pkgver=2.12.5
+pkgver=2.12.6
 pkgrel=0
 pkgdesc="Lossy PNG compressor"
 url="https://pngquant.org"
 arch="all"
 license="GPL-3.0-or-later"
-makedepends="libpng-dev lcms2-dev bash"
+makedepends="libpng-dev lcms2-dev libimagequant-dev"
+checkdepends="bash"
 subpackages="$pkgname-doc"
-source="https://pngquant.org/$pkgname-$pkgver-src.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/kornelski/pngquant/archive/$pkgver/pngquant-$pkgver.tar.gz"
 
 build() {
-	./configure --prefix=/usr
+	./configure \
+		--prefix=/usr \
+		--with-openmp
 	make
 }
 
 check() {
-	./pngquant --help > /dev/null
+	make test
 }
 
 package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="54e624d68934036815faa11b6e6da8559b7e7e3b4b7933b61bd98758ddfc2c3b70b1642aafd75fe40121fd3c88edaeef3bbe9549661e13b689fb1ecc29e5c5af  pngquant-2.12.5-src.tar.gz"
+sha512sums="8ffff346df67edf1000c71b6d26371826bc4d236b3f57ef1ec73b3b61668cff9c3ca7d541417c39bc6c89e00176c91eb28867b7a91945ac84292ca0ac54984e9  pngquant-2.12.6.tar.gz"
