--- a/community/grilo/APKBUILD
+++ b/community/grilo/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer:
 pkgname=grilo
-pkgver=0.3.10
+pkgver=0.3.11
 pkgrel=0
 pkgdesc="GNOME media discovery framework"
 url="https://wiki.gnome.org/Projects/Grilo"
@@ -12,9 +12,7 @@ makedepends="gnome-desktop-dev liboauth-dev gmime-dev libsoup-dev libxml2-dev
 	docbook-xml docbook-xsl meson vala gtk-doc"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-libs"
 # source="https://download.gnome.org/sources/grilo/0.3/grilo-$pkgver.tar.xz"
-source="$pkgname-$pkgver.tar.gz::https://github.com/GNOME/grilo/archive/grilo-$pkgver.tar.gz
-	fix-build-with-new-totel-pl-parser.patch
-	"
+source="https://gitlab.gnome.org/GNOME/grilo/-/archive/grilo-$pkgver/grilo-grilo-$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-$pkgname-$pkgver"
 
 build() {
@@ -34,5 +32,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="9089b0f64fdc4da82a4d087b54af407a37b64214e3553519d76bdafc380406851ed3cd060312b332b3cf67d0a105b72829e245846b47365c7101f52812ffbeda  grilo-0.3.10.tar.gz
-bd0af0e0c390bb610556cd165b1e7317f1cf683f1f2649e4d56f8359803aff7474749e19c8812feefb5c192d9554f4cb5de2857861c3df69d21903c565eab2df  fix-build-with-new-totel-pl-parser.patch"
+sha512sums="0740921cd2adb4e95edbb7d54cde216be143d582f3511b5e1c902ec1dd34b5a38217677b78712ca21fd7e005985abffcf407d7a48dd6d0d1f359678081b2ef75  grilo-grilo-0.3.11.tar.gz"
