community/cbindgen: upgrade to 0.12.2

--- a/community/cbindgen/APKBUILD
+++ b/community/cbindgen/APKBUILD
@@ -1,27 +1,27 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=cbindgen
-pkgver=0.12.1
+pkgver=0.12.2
 pkgrel=0
 pkgdesc="Tool to generate C bindings from Rust code"
 url="https://github.com/eqrion/cbindgen"
 arch="x86_64 armv7 armhf aarch64 x86 ppc64le" # Limited by cargo
 license="MPL-2.0"
 makedepends="cargo"
-source="$pkgname-$pkgver.tar.gz::https://github.com/eqrion/cbindgen/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://crates.io/api/v1/crates/cbindgen/$pkgver/download"
 
 build() {
-	cargo build --release --verbose
+	cargo build --release --locked --verbose
 }
 
 check() {
 	# Failing tests
 	rm -rf tests/rust/expand*
-	cargo test --release --verbose
+	cargo test --release --locked --verbose
 }
 
 package() {
 	install -Dm0755 target/release/cbindgen -t "$pkgdir"/usr/bin
 }
 
-sha512sums="7552d025950df4af0564f78e0207323a2539b543a1eb5c73f1934cdb4da572dee16917e0afb57e0f359fd5fa63874097fa1a0015dec485025408829d4055ba0b  cbindgen-0.12.1.tar.gz"
+sha512sums="9d0f58e89de86e31bb0e84b13e569951c20b7ed8e74b3854e90aa3e5d1036170956ff9c94544711c0b21a331eb2516e58b6d3580b76de7bbaf0dc367d483e4e1  cbindgen-0.12.2.tar.gz"
