--- a/community/vips/APKBUILD
+++ b/community/vips/APKBUILD
@@ -1,15 +1,17 @@
 # Contributor: Will Jordan <will.jordan@gmail.com>
 # Maintainer: Will Jordan <will.jordan@gmail.com>
 pkgname=vips
-pkgver=8.8.4
+pkgver=8.9.0
 pkgrel=0
 pkgdesc="A fast image processing library with low memory needs"
+options="!check" # oss-fuzz fails
 url="http://www.vips.ecs.soton.ac.uk/"
 arch="all !s390x !ppc64le" # test_seq.sh fails on ppc64le
 license="LGPL-2.1-or-later"
 makedepends="expat-dev fftw-dev giflib-dev glib-dev lcms2-dev
 	libexif-dev libjpeg-turbo-dev libpng-dev libwebp-dev
-	orc-dev tiff-dev libheif-dev"
+	orc-dev tiff-dev libheif-dev gobject-introspection-dev
+	libimagequant-dev librsvg-dev"
 checkdepends="bc"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-tools"
 source="https://github.com/libvips/libvips/releases/download/v$pkgver/vips-$pkgver.tar.gz"
@@ -24,7 +26,8 @@ build() {
 		--disable-static \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
-		--docdir=/usr/share/doc
+		--docdir=/usr/share/doc \
+		--enable-introspection
 	make
 }
 
@@ -42,4 +45,4 @@ tools() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="d65eb9ce009ee0d23e3cb958ed255414ca422c3db11362afb2cd88fe82062f2ed87ac1eb80993130c35fb8e70bb297faa9f12a37faa7f3628ea8df2a26112d11  vips-8.8.4.tar.gz"
+sha512sums="ea2b25b08a18364b89e4e142060f2b28fb0eae3fb9112678f029429aadf7b4e8cb6d9f601910c71c42f745c26ee91ddc16729ad899d1388d71c4778d89215704  vips-8.9.0.tar.gz"
