main/grub: fix booting Xen under EFI
Need to use multiboot2 while booting Xen under EFI, and not multiboot as
is used when generating grub.cfg with grub-mkconfig.

Backport commits included in upstream Grub 2.04.

Diskless setups are not affected, as grub.cfg is generated manually by
the mkimage scipts.

--- a/main/grub/APKBUILD
+++ b/main/grub/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=grub
 pkgver=2.02
-pkgrel=19
+pkgrel=20
 pkgdesc="Bootloader with support for Linux, Multiboot and more"
 url="https://www.gnu.org/software/grub/"
 arch="all !s390x"
@@ -66,6 +66,10 @@ source="https://ftp.gnu.org/gnu/grub/grub-$pkgver.tar.xz
 	0018-xen_pvh-Support-building-a-standalone-image.patch
 	0019-xen_pvh-Support-grub-install-for-xen_pvh.patch
 	0020-xen_pvh-Add-support-to-configure.patch
+
+	0001-util-grub.d-20_linux_xen.in-Add-xen_boot-command-sup.patch
+	0002-Fix-util-grub.d-20_linux_xen.in-Add-xen_boot-command.patch
+	0003-Use-grub-file-to-figure-out-whether-multiboot2-shoul.patch
 	"
 builddir="$srcdir/grub-$pkgver"
 
@@ -264,4 +268,7 @@ fe7ea6eeab330c0fdfd0b2a858acdff88c68f69d80b9abb21b4c3cd1d18f8717ab7c47729e28857c
 3e78cd3cd1c70236d8e9e3a536eb2f887283b5d257f60533d22d093df76c1c3c60e490acae4b738301c87edbac2e27398fce6ddbbeb9b2f193191c76afb9bd8b  0017-xen-Use-elfnote-defines-instead-of-plain-numbers.patch
 c8a16db1224c9fb4a26ef39fbd8c36bf26ff68d45d88fb4e2530369c5bccadf0208551c34c0d16e9ee4a3102d67edad26a46e7b8388222f530310762246df8ef  0018-xen_pvh-Support-building-a-standalone-image.patch
 b00cb9146cadc1f48586dcab31ac4605d9591d860283000accf709a489f136bf5c8fe3351dbefe51f9e27407ca3f1ce5dd7bc2ac64ac826f593183ef5d3a9759  0019-xen_pvh-Support-grub-install-for-xen_pvh.patch
-78bc31b69cde95a29b365b43898caf69238c036683a26e5448d66cd48c7a4906d2a9eff065f082c5300b72616d6e63033891fd75d59ce724759dc998d9942a37  0020-xen_pvh-Add-support-to-configure.patch"
+78bc31b69cde95a29b365b43898caf69238c036683a26e5448d66cd48c7a4906d2a9eff065f082c5300b72616d6e63033891fd75d59ce724759dc998d9942a37  0020-xen_pvh-Add-support-to-configure.patch
+9eb4d168824d863791040e7d288dfa2bd5314c34389adb92683b6335c5bd5426f74ec98257bcfde6ab89836ae33954ac1ad2e1caf451c2d6ab4540a4f394c985  0001-util-grub.d-20_linux_xen.in-Add-xen_boot-command-sup.patch
+b0ab04fff0d998a78d5de7610544de14912dc5ac27f99d74e86df7ef59db02ad4a45620030d1ff640d7c09d1f3aecaf7506dfb21dc01377f6a1f3d5a95c2978b  0002-Fix-util-grub.d-20_linux_xen.in-Add-xen_boot-command.patch
+34518e3917bd3fd8e5944fcb6d208515ff4f2ae2e74736eb451a532bc116a63232b8fed28ca91c2417e815d179d438795ccbf6735edcaed2c0760555635d595e  0003-Use-grub-file-to-figure-out-whether-multiboot2-shoul.patch"
