--- a/community/zathura-pdf-poppler/APKBUILD
+++ b/community/zathura-pdf-poppler/APKBUILD
@@ -2,29 +2,24 @@
 # Contributor: Jean-Louis Fuchs <ganwell@fangorn.ch>
 # Maintainer: Jean-Louis Fuchs <ganwell@fangorn.ch>
 pkgname=zathura-pdf-poppler
-pkgver=0.2.9
-pkgrel=2
-pkgdesc="zathura-pdf-poppler - poppler plugin adds PDF support to zathura"
+pkgver=0.3.0
+pkgrel=0
+pkgdesc="Poppler plugin adds PDF support to zathura"
+options="!check" # No testsuite
 url="https://git.pwmt.org/pwmt/zathura-pdf-poppler"
 arch="all"
-license="zlib"
+license="Zlib"
 depends="zathura"
 makedepends="zathura-dev poppler-dev meson ninja"
-source="https://git.pwmt.org/pwmt/$pkgname/-/archive/$pkgver/$pkgname-$pkgver.tar.gz"
-
-options="!check"
-
-builddir="$srcdir"/$pkgname-$pkgver
+source="https://git.pwmt.org/pwmt/zathura-pdf-poppler/-/archive/$pkgver/zathura-pdf-poppler-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	meson build --prefix=/usr
 	ninja -C build
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="42342b6b3718da317d87bf138b948d1d8ac8b4f18e7e091de6980c11f9bb619a8321fbead2b2cb29e6cc2aa958d2c211a3137340953890d121a17dc1b4d1696b  zathura-pdf-poppler-0.2.9.tar.gz"
+sha512sums="588c1d03fef2b0cbb44af6904ab078ae3686d79ce05b1448a41a62ac807226cade4b54725002f0c4bd9c428b192b607664da4bdc8d83c792fab250ef43622a85  zathura-pdf-poppler-0.3.0.tar.gz"
