community/zsh-autosuggestions: upgrade to 0.6.4

--- a/community/zsh-autosuggestions/APKBUILD
+++ b/community/zsh-autosuggestions/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=zsh-autosuggestions
-pkgver=0.6.3
+pkgver=0.6.4
 pkgrel=0
 pkgdesc="Fish-like autosuggestions for Zsh"
 options="!check" # No testsuite
@@ -12,8 +12,8 @@ depends="zsh"
 source="$pkgname-$pkgver.tar.gz::https://github.com/zsh-users/zsh-autosuggestions/archive/v$pkgver.tar.gz"
 
 package() {
-	install -D ${pkgname}.zsh ${pkgname}.plugin.zsh -t \
+	install -D $pkgname.zsh $pkgname.plugin.zsh -t \
 		 "$pkgdir/usr/share/zsh/plugins/$pkgname"
 }
 
-sha512sums="bafeca5c6ef3d315310976762fdc5db5ae3db3960c4ac17c1ac139a4d09c2733c24884e7f708881e3f3cacf96c39d9ddeac0b1ca6c8720d2febb41c9894d4ad3  zsh-autosuggestions-0.6.3.tar.gz"
+sha512sums="226b99048577ecdbe198501e6e4b3156c3d849994f0a2f7e15687cd244d4cac472cbcf746aaa32b2886652f6962852a475777b5f2bfcb3a6d0279be98a6020bb  zsh-autosuggestions-0.6.4.tar.gz"
