--- a/testing/pcsc-tools/APKBUILD
+++ b/testing/pcsc-tools/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Carlo Landmeter <clandmeter@alpinelinux.org>
 # Maintainer:
 pkgname=pcsc-tools
-pkgver=1.5.4
+pkgver=1.5.5
 pkgrel=0
 pkgdesc="tools to test a PC/SC driver, card or reader or send commands"
 url="http://ludovic.rousseau.free.fr/softwares/pcsc-tools/"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 depends="pcsc-perl"
 makedepends="pcsc-lite-dev"
 subpackages="$pkgname-doc"
@@ -31,4 +31,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="c64b9445dcdf72a7e5627380894c1f627ebcb343a497524ee185b64110c2c2b8b6138cae5610439991ab9756fd89ea5de0e054e68698b220d11606b38f7a90c6  pcsc-tools-1.5.4.tar.bz2"
+sha512sums="b34eaea663274e03790e409909ddb9819b20882795af2618068f59532e2f79973b22b4d0c468a0bb4338c74d1ceca310e8c60005fb1d15ab4f34053125ece3bf  pcsc-tools-1.5.5.tar.bz2"
