community/kde-frameworks: upgrade to 5.66

--- a/community/kcalendarcore/APKBUILD
+++ b/community/kcalendarcore/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kcalendarcore
-pkgver=5.65.0
+pkgver=5.66.0
 pkgrel=0
 pkgdesc="The KDE calendar access library"
 arch="all"
@@ -32,12 +32,12 @@ build() {
 
 check() {
 	cd "$builddir"/build
-	# testrecurtodo, testreadrecurrenceid, testicaltimezones and testmemorycalendar are broken
-	CTEST_OUTPUT_ON_FAILURE=TRUE ctest -E "test(recurtodo|readrecurrenceid|icaltimezones|memorycalendar)"
+	# testrecurtodo, testreadrecurrenceid, testicaltimezones, testmemorycalendar and testtimesininterval are broken
+	CTEST_OUTPUT_ON_FAILURE=TRUE ctest -E "test(recurtodo|readrecurrenceid|icaltimezones|memorycalendar|timesininterval)"
 }
 
 package() {
 	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
-sha512sums="4222a7223b9c6a45bc6966e547f9caa129e469a21386be271678ac3e6fcc2574593ca9dbb3f00bec30030f3d4511fb219a692607cd3b5fdcecd29be758a6e3ae  kcalendarcore-5.65.0.tar.xz"
+sha512sums="155b229c9903f8f72fc54950810e6efbd3fc81a9e546b747170ef9125115617db248a4936206671b4e7aa2337a95791f43f8532762e761f6ad22d4e2e73d45e2  kcalendarcore-5.66.0.tar.xz"
