community/nvme-cli: upgrade to 1.10.1

--- a/community/nvme-cli/APKBUILD
+++ b/community/nvme-cli/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Florian Heigl <florian.heigl@gmail.com>
 # Maintainer: Florian Heigl <florian.heigl@gmail.com>
 pkgname=nvme-cli
-pkgver=1.9
+pkgver=1.10.1
 pkgrel=0
 pkgdesc="NVM-Express user space tooling for Linux"
 options="!check" # Requires nose2
@@ -15,6 +15,7 @@ subpackages="
 	$pkgname-zsh-completion:zshcomp:noarch
 	"
 source="$pkgname-$pkgver.tar.gz::https://github.com/linux-nvme/nvme-cli/archive/v$pkgver.tar.gz
+	PATH_MAX.patch
 	"
 
 build() {
@@ -45,4 +46,5 @@ zshcomp() {
 			"$subpkgdir"/usr/share/zsh/site-functions/_nvme
 }
 
-sha512sums="3565b33bc39bde4480bbde5d46d75ea6907c0921884e8f39029b746f8383d3630942e405c61bcc3654bac5646bc86479b4b790e1b823ec83650649621bab6dac  nvme-cli-1.9.tar.gz"
+sha512sums="92bef073205b357f4b14ba929b7f261d0c18b343e5e244cefc24521dfc581dec4b941a13dc00f9a3b4d938ccd026c847d58ccfd75f813cc3c4f484f8316269dc  nvme-cli-1.10.1.tar.gz
+c4b66b47c0ee04125cafd77b4601dcef3fe439fcc311e8a1850e83f903b81a81059acbcf15397054572b31b5b144964fac7aee1be3b0c2f3b26b65e87070ef10  PATH_MAX.patch"
