community/php7-phalcon: upgrade to 4.0.2

--- a/community/php7-phalcon/APKBUILD
+++ b/community/php7-phalcon/APKBUILD
@@ -3,11 +3,11 @@
 pkgname=php7-phalcon
 _pkgext=phalcon
 _pkgreal=cphalcon
-pkgver=4.0.1
+pkgver=4.0.2
 _pkgver=${pkgver/_rc/RC}
 pkgrel=0
 pkgdesc="High performance, full-stack PHP framework delivered as a C extension"
-url="https://github.com/phalcon/cphalcon"
+url="https://phalcon.io/"
 arch="all"
 license="BSD-3-Clause"
 depends="php7-curl php7-fileinfo php7-gettext php7-json php7-mbstring php7-openssl php7-pdo php7-session php7-pecl-psr"
@@ -40,4 +40,4 @@ package() {
 	echo "extension=$_pkgext.so" > "$pkgdir"/etc/php7/conf.d/$_pkgext.ini
 }
 
-sha512sums="4ce21b002e8342eaaeb0f9443274a3f78c66938952c856373aff57bf1c5feb81536402d5d4aeafb89f2fc1fc32a3b2879eb290fe83bc1cc42b3ebe4f53db1ce9  php7-phalcon-4.0.1.tar.gz"
+sha512sums="1496b4747a15fd11820dbe17175a033777e0bb7ca0eeea06ca3ec8797710b1ad6401b62699c0d75774cd2c8a33c8212849e940596835c0b8ec1049f35f76dca8  php7-phalcon-4.0.2.tar.gz"
