community/php7-pecl-igbinary: upgrade to 3.1.1a1

--- a/community/php7-pecl-igbinary/APKBUILD
+++ b/community/php7-pecl-igbinary/APKBUILD
@@ -3,7 +3,7 @@
 
 pkgname=php7-pecl-igbinary
 _pkgreal=igbinary
-pkgver=3.1.0
+pkgver=3.1.1a1
 pkgrel=0
 pkgdesc="Igbinary is a drop in replacement for the standard php serializer"
 url="https://pecl.php.net/package/igbinary"
@@ -38,4 +38,4 @@ package() {
 		"$pkgdir"/etc/php7/conf.d/10_$_pkgreal.ini
 }
 
-sha512sums="3b3010a43510ab4f52a2282b40a2b4da01a02ab6267c4ea155e51d65f9a7d7fb1ca4e5943ed874a0a2f3cb0dc8e44491fe2206335d28999c96d83f3c8ae52a3d  php7-pecl-igbinary-3.1.0.tgz"
+sha512sums="50545b279a734d8fe1e651009aaeb8d16ad94bab1220b2b0a0c9c9c97549146c52f6ff7cf6d4edd0172602dd9a0d8ad83375a3567155f0814eed3eb7925b3fc4  php7-pecl-igbinary-3.1.1a1.tgz"
