--- a/testing/ecasound/APKBUILD
+++ b/testing/ecasound/APKBUILD
@@ -1,11 +1,11 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Jean-Louis Fuchs <ganwell@fangorn.ch>
 pkgname=ecasound
-pkgver=2.9.2
+pkgver=2.9.3
 pkgrel=0
 pkgdesc="Textmode multitrack audio processing"
 url="https://ecasound.seul.org/ecasound/"
-arch="all"
+arch="all !s390x" # Testsuite fails
 license="GPL-2.0-or-later"
 makedepends="alsa-lib-dev readline-dev ncurses-dev
 	mpg123-dev lame-dev libsndfile-dev libsamplerate-dev"
@@ -30,4 +30,4 @@ check() {
 	make check
 }
 
-sha512sums="fca6b37b5f669ba8616e48afe24fbfd53da3cb4987d2d6a2d6167843de34371a4c2cdceb6faf677462d6efb4069dd1d27ffafc1ceb19de56f4a051f077ada07b  ecasound-2.9.2.tar.gz"
+sha512sums="4f70e6f54cd05194a4ffe80905e7488d16d32d684c87736dfdac7b3aebf3d20cbf417964d75e00e781f6f0614b8b699061c69fcbf7e1761d66ce1abfcd5f1140  ecasound-2.9.3.tar.gz"
