testing/mdcat: upgrade to 0.15.0

--- a/testing/mdcat/APKBUILD
+++ b/testing/mdcat/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer:
 pkgname=mdcat
-pkgver=0.14.0
+pkgver=0.15.0
 pkgrel=0
 pkgdesc="Cat for markdown"
 url="https://github.com/lunaryorn/mdcat"
@@ -26,12 +26,11 @@ build() {
 }
 
 check() {
-	cargo test --release
+	cargo test --release --locked
 }
 
 package() {
-	cargo install --path . --root="$pkgdir/usr"
-	rm "$pkgdir"/usr/.crates.toml
+	install -s -Dm0755 target/release/mdcat -t "$pkgdir"/usr/bin
 }
 
-sha512sums="241e3e3c5c15d9b1c59218b8741ae1791517c2d66dcdff3d570e9971d56669d005ca6239404ccc769ee7a1841f1be5e5a64f098ac4577b7410321259abe8a148  mdcat-0.14.0.tar.gz"
+sha512sums="762520b46d49136646e96553f7d023c6a457843699b1479d09bb73d86cde14f44997e53b14f16859d286ef1dd6c7f28ddcc10293362306b1f1d4b8d34df3e706  mdcat-0.15.0.tar.gz"
