--- a/testing/spectral/APKBUILD
+++ b/testing/spectral/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=spectral
 pkgver=0.0.0.648
 _pkgver=${pkgver##*.}
-pkgrel=0
+pkgrel=1
 _commit_libquotient="89e0cec42fe9538cbd170a9dc3fcf6dd18b5ac02"
 _commit_sortfilterproxymodel="35ffc48d7f516607832cd56f88be9a022f0ab2f9"
 # Blocked on armhf by qt5-qtdeclarative
@@ -12,6 +12,7 @@ arch="all !armhf !s390x"
 url="https://gitlab.com/b0/spectral"
 pkgdesc="A glossy cross-platform Matrix client"
 license="GPL-3.0-or-later"
+depends="olm font-noto-emoji"
 makedepends="qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtmultimedia-dev"
 source="$pkgname-$pkgver.tar.gz::https://gitlab.com/b0/spectral/-/archive/$_pkgver/spectral-$_pkgver.tar.gz
 	libQuotient-$_commit_libquotient.tar.gz::https://github.com/quotient-im/libQuotient/archive/$_commit_libquotient.tar.gz
