--- a/testing/cdogs-sdl/APKBUILD
+++ b/testing/cdogs-sdl/APKBUILD
@@ -9,17 +9,17 @@ arch="x86_64 x86"
 license="GPL"
 makedepends="cmake sdl2_image-dev sdl2-dev sdl2_mixer-dev mesa-dev"
 options="!check"
-source="$pkgname-$pkgver.tar.gz::https://github.com/cxong/$pkgname/archive/$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/cxong/cdogs-sdl/archive/$pkgver.tar.gz"
 
 build() {
-  cmake CMakeLists.txt \
-        -DCMAKE_INSTALL_PREFIX=/usr \
-        -DCDOGS_DATA_DIR=/usr/share/cdogs-sdl/ \
-        -DCMAKE_BUILD_TYPE=Release 
-  make
+	cmake CMakeLists.txt \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCDOGS_DATA_DIR=/usr/share/cdogs-sdl/ \
+		-DCMAKE_BUILD_TYPE=Release
+	make
 }
 
 package() {
-   make DESTDIR="$pkgdir" install
+	make DESTDIR="$pkgdir" install
 }
 sha512sums="33ff3a0fa9c8f5d32b79caf52fc9cf1472d71245821f841fdaa926acaa7c4342884be975962f128e5d5f24e2ad86923547116f8ca29d157960cc1181d4aa6cba  cdogs-sdl-0.7.0.tar.gz"
