testing/thunderbird: upgrade to 68.4.1

--- a/testing/thunderbird/APKBUILD
+++ b/testing/thunderbird/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Joseph Benden <joe@benden.us>
 
 pkgname=thunderbird
-pkgver=68.3.1
+pkgver=68.4.1
 _pkgver=$pkgver
 _xulver=$pkgver
 pkgrel=0
@@ -90,7 +90,6 @@ source="https://ftp.mozilla.org/pub/thunderbird/releases/$pkgver/source/thunderb
 	fix-webrtc-glibcisms.patch
 	fix-sandbox-membarrier.patch
 	thunderbird.desktop
-	thunderbird-68.2.2-rust-1.39+.patch
 	"
 _mozappdir=/usr/lib/$pkgname
 
@@ -262,7 +261,7 @@ END
 		"$pkgdir/usr/lib/$pkgname/thunderbird-bin"
 }
 
-sha512sums="2e24556e6bed7a8d75ad56f0e94e07483e021b8b1ddafcf0dc586c17c93ba1f6994194866a37b7fe23637804c351f0c24d365d39f327f0ee591a86b9560bbb03  thunderbird-68.3.1.source.tar.xz
+sha512sums="16cccbc2313472e6312e842a28079782238cb22e72b324bebaffefa4a2fe68fec9f2173f2c83f1caccc5522ab9145884b2e2a58e97e236f7aefa4c61764e08b7  thunderbird-68.4.1.source.tar.xz
 0b3f1e4b9fdc868e4738b5c81fd6c6128ce8885b260affcb9a65ff9d164d7232626ce1291aaea70132b3e3124f5e13fef4d39326b8e7173e362a823722a85127  stab.h
 3e57b2541f3889a1cf701860c8bf299f294cb077b0e8cfffda271cf02d1f59b25a697485d0df66e847e47f795b1ace54488a84a42851f2f8587717335537b44d  disable-ccache-stats.patch
 2f4f15974d52de4bb273b62a332d13620945d284bbc6fe6bd0a1f58ff7388443bc1d3bf9c82cc31a8527aad92b0cd3a1bc41d0af5e1800e0dcbd7033e58ffd71  fix-fortify-system-wrappers.patch
@@ -275,5 +274,4 @@ e0df4fc649012f023443ce9165da29d36459dbca5df64a31008b28d96264fba909858de36d0cf1b1
 7903987b4b661286de03c6940bf67aaed6d78c9adc57680413407a84a1f1f26aaded35e6d53ea6ad527b474968b343d844e81e16d777c0e29b830b51aa2ca8c3  fix-rust-target.patch
 d35cacb9ede80e6bfbef0709823e536dddfb1c02d776275b0b7adb5969e9927d8c6117df96873569c3f3db0a18ee5db24f8086a9311a05077892be43a3dd8d79  fix-webrtc-glibcisms.patch
 f85f2c19c3dafab915bcb40e580fc442fd9eab5916696849edf0b105c758dd807dfe23a6479935613c81496711eb377c73227c03eb8582204c3442a4d0e397a2  fix-sandbox-membarrier.patch
-95a2b1deb4f6c90750fdd2bfe8ca0a7879a5b267965091705a6beb0a0a4b1ccad75d11df7b9885543ca4232ff704e975c6946f4c11804cb71c471e06f9576001  thunderbird.desktop
-549daf63bcd73eca6317c4c2f007c4053df206cd6e2d34265d2064db8eadf34dce3d5e82f41d9bcb6364ac3de92dcce425e2fe8dca55eee58c20ea9afaa1b725  thunderbird-68.2.2-rust-1.39+.patch"
+95a2b1deb4f6c90750fdd2bfe8ca0a7879a5b267965091705a6beb0a0a4b1ccad75d11df7b9885543ca4232ff704e975c6946f4c11804cb71c471e06f9576001  thunderbird.desktop"
