testing/spectral: upgrade to 0.0.0.817

--- a/testing/spectral/APKBUILD
+++ b/testing/spectral/APKBUILD
@@ -1,20 +1,21 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=spectral
-pkgver=0.0.0.648
+pkgver=0.0.0.817
 _pkgver=${pkgver##*.}
 pkgrel=1
-_commit_libquotient="89e0cec42fe9538cbd170a9dc3fcf6dd18b5ac02"
-_commit_sortfilterproxymodel="35ffc48d7f516607832cd56f88be9a022f0ab2f9"
+_commit_libquotient="16d6700950f5f0ebd71481efd5e1a24f04e3c651"
+_commit_sortfilterproxymodel="36befddf5d57faad990e72c88c5844794f274145"
 # Blocked on armhf by qt5-qtdeclarative
 # Broken on s390x
 arch="all !armhf !s390x"
-url="https://gitlab.com/b0/spectral"
+url="https://gitlab.com/spectral-im/spectral"
 pkgdesc="A glossy cross-platform Matrix client"
 license="GPL-3.0-or-later"
-depends="olm font-noto-emoji"
-makedepends="qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtmultimedia-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/b0/spectral/-/archive/$_pkgver/spectral-$_pkgver.tar.gz
+depends="font-noto-emoji"
+makedepends="cmake qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtmultimedia-dev qt5-qtsvg-dev qt5-qtquickcontrols2-dev
+ qt5-qtkeychain-dev libqtolm-dev olm-dev libsecret-dev cmark-dev"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/spectral-im/spectral/-/archive/$_pkgver/spectral-$_pkgver.tar.gz
 	libQuotient-$_commit_libquotient.tar.gz::https://github.com/quotient-im/libQuotient/archive/$_commit_libquotient.tar.gz
 	SortFilterProxyModel-$_commit_sortfilterproxymodel.tar.gz::https://github.com/oKcerG/SortFilterProxyModel/archive/$_commit_sortfilterproxymodel.tar.gz"
 options="!check" # No tests
@@ -31,18 +32,18 @@ prepare() {
 }
 
 build() {
-	# TODO: set USE_SYSTEM_QMATRIXCLIENT to true once libQuotient 0.6.0 is out
-	qmake-qt5 \
-		PREFIX=/usr \
-		USE_SYSTEM_QMATRIXCLIENT=false \
-		USE_SYSTEM_SORTFILTERPROXYMODEL=false
+	# TODO: set USE_INTREE_LIBQMC to true once libQuotient 0.6.0 is out
+	cmake \
+		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DUSE_INTREE_LIBQMC=true
 	make
 }
 
 package() {
-	INSTALL_ROOT="$pkgdir" make install
+	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="4802e1e6b0e18cae58f999d6352806179c3bd749bdff9a9dd95ea53367da2a37d4195ffaf9afe9613a8da67ad9d1d4ce1363870f1db9ecbb1e94ee236a6bd27c  spectral-0.0.0.648.tar.gz
-aa5cb722f3cd3549cd1e8e0531bb1586ff8f1134e384bc8b68cef40c960171607d569efa4d318cc59a92e1dd72d52495d62cc1bec9b75a07b12fa3e5a7992a5f  libQuotient-89e0cec42fe9538cbd170a9dc3fcf6dd18b5ac02.tar.gz
-e1f49e8a2fa6649d28d8777d3d1489341e31f94afdb383c81b98ff14a8d705db02be304173398333fad4c68fd42263ef8fd34ffe2f546aeb328e50106a34fdee  SortFilterProxyModel-35ffc48d7f516607832cd56f88be9a022f0ab2f9.tar.gz"
+sha512sums="82fcb0b035cc6f98358c44d784045b034ff4f2339ddf77e1734da807657eea3d0abe0069e542343f3f4781310ba6028886407083924f399df54f6afd0e9b1466  spectral-0.0.0.817.tar.gz
+d4510dd46441865311e046b4986ce86e43a138a27f92f1671ff4758d54c82d613fcfec6a2813190b6c1336d2df75b60dccbf92553e3b76374b3fad9b25518dba  libQuotient-16d6700950f5f0ebd71481efd5e1a24f04e3c651.tar.gz
+bfb7af36abd5ded014549042e760c1ec6779f46dd6c30e672ada21decc7a1b1a631ada1cc2c57d62d0daca4cccff9640077345b3661ef73021d5e2ee8058ae9b  SortFilterProxyModel-36befddf5d57faad990e72c88c5844794f274145.tar.gz"
