community/py3-ecdsa: upgrade to 0.15

--- a/community/py3-ecdsa/APKBUILD
+++ b/community/py3-ecdsa/APKBUILD
@@ -2,15 +2,15 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-ecdsa
 _pkgname=ecdsa
-pkgver=0.14.1
+pkgver=0.15
 pkgrel=0
 pkgdesc="Python3 cryptographic signature library"
 url="https://github.com/warner/python-ecdsa"
 arch="noarch"
 license="MIT"
-options="!check" # No tests available
 depends="python3 py3-six"
 makedepends="py3-setuptools"
+checkdepends="py3-hypothesis py3-pytest"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
@@ -26,12 +26,12 @@ build() {
 	python3 setup.py build
 }
 
-build() {
-	python3 setup.py check
+check() {
+	py.test-3
 }
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="6a66e07ec75e93af73d2363dfd817b35a103f8ff8d62c5ce3af9e98e917d38213aa4f80d570f81c830938123f9599e24d96605a36650eaefd806ed07ab0c14a5  ecdsa-0.14.1.tar.gz"
+sha512sums="7b7491d1abdb5ca43456d943c96525fa5d722635c496bbddd04ef8e1baad9dc0aef3d1752afea7820f7796421b18295ee260657ec1e8faf7564613b316c0d603  ecdsa-0.15.tar.gz"
