--- a/community/kde-gtk-config/APKBUILD
+++ b/community/kde-gtk-config/APKBUILD
@@ -4,11 +4,11 @@ pkgname=kde-gtk-config
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="GTK2 and GTK3 Configurator for KDE"
-arch="all"
+arch="all !armhf" # qtdeclarative
 url="https://cgit.kde.org/kde-gtk-config"
 license="GPL-2.0 AND LGPL-2.1-only OR LGPL-3.0-only"
 depends="gsettings-desktop-schemas"
-makedepends="extra-cmake-modules gsettings-desktop-schemas qt5-qtbase-dev qt5-qtsvg-dev ki18n-dev kio-dev kconfigwidgets-dev knewstuff-dev karchive-dev kcmutils-dev kiconthemes-dev gtk+2.0-dev gtk+3.0-dev gsettings-desktop-schemas-dev"
+makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtsvg-dev ki18n-dev kio-dev kconfigwidgets-dev knewstuff-dev karchive-dev kcmutils-dev kiconthemes-dev gtk+2.0-dev gtk+3.0-dev gsettings-desktop-schemas-dev"
 source="https://download.kde.org/stable/plasma/$pkgver/kde-gtk-config-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
